enhance trade with tradeAction. Also DB init
