# src/BlockEx/BlockExAPI/models/trades.js
@@ -1,20 +1,25 @@
 'use strict';
 module.exports = function (sequelize, DataTypes) {
   var Trades = sequelize.define('Trade', {
-    tradeId: { type: DataTypes.INTEGER, autoIncrement: true, primaryKey: true },
+    tradeId: {
+      type: DataTypes.INTEGER,
+      autoIncrement: true,
+      primaryKey: true
+    },
     parentId: DataTypes.INTEGER,
-    saleData: DataTypes.TEXT,
+    tradeAction: DataTypes.STRING,
+    offerData: DataTypes.TEXT,
     bidData: DataTypes.TEXT,
     expiryTimestamp: DataTypes.DATE,
     txHex: DataTypes.TEXT,
     status: DataTypes.STRING,
     postedBy: DataTypes.STRING
   }, {
-      classMethods: {
-        associate: function (models) {
-          // associations can be defined here
-        }
+    classMethods: {
+      associate: function (models) {
+        // associations can be defined here
       }
-    });
+    }
+  });
   return Trades;
 };
